src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@out1-wfsBU-spA2.snap
---
source: src/tests/window_opening.rs
description: "open on output: headless-1\nwant fullscreen: BU\nset parent: A2"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
